<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
  	
  	<item
        android:id="@+id/new_top_level_comment"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="always"
        android:title="@string/new_top_level_comment"/>
   <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_action_sort_by_size"
        android:showAsAction="always"
        android:title="@string/action_sort"/>
   <item
        android:id="@+id/action_bookmark"
        android:icon="@drawable/ic_action_bookmark"
        android:showAsAction="always"
        android:title="@string/action_bookmark"/>
   <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="always"
        android:title="@string/action_refresh"/>
</menu>
