<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <EditText 
        android:id="@+id/new_comment_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"/>
    <EditText 
        android:id="@+id/new_comment_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/body"/>
    <EditText 
        android:id="@+id/new_comment_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/author"/>
    <Button 
        android:id="@+id/new_comment_ok"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/OK"/>
</LinearLayout>
