<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/comment_image"
            android:src="@drawable/ic_action_uploadedphoto" />

         <TextView
            android:id="@+id/profile_username_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/profile_username_title"
            android:textColor="#33B5E5"
            android:textSize="20sp" />

        <View
            android:id="@+id/profile_divider1"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"
            android:paddingBottom="2dp" />

        <TextView
            android:id="@+id/profile_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:hint="@string/profile_username" />

        <TextView
            android:id="@+id/profile_contact_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/profile_contact_title"
            android:textColor="#33B5E5"
            android:textSize="20sp" />

        <View
            android:id="@+id/profile_divider2"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"
            android:paddingBottom="2dp" />

        <TextView
            android:id="@+id/profile_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:hint="@string/profile_contact" />

        <TextView
            android:id="@+id/biography_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/biography_title"
            android:textColor="#33B5E5"
            android:textSize="20sp" />

        <View
            android:id="@+id/profile_divider3"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"
            android:paddingBottom="2dp" />

        <TextView
            android:id="@+id/biography_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="10dp"
            android:text="@string/biography_body"
            android:textSize="15sp" />
    </LinearLayout>

</ScrollView>