<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/helpIconsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_icons"
            android:textAppearance="?android:attr/textAppearanceMedium" />
		
        <RelativeLayout
            android:id="@+id/RelativeLayoutHelp1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
	        
	        <ImageView
	            android:id="@+id/addPostIcon"
	            android:contentDescription="@string/add_post_detail"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:src="@drawable/ic_action_new" />
	
	        <TextView
	            android:id="@+id/addPostTextView"
	            android:layout_toRightOf="@+id/addPostIcon"
	            android:layout_alignBottom="@+id/addPostIcon"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="20dp"
	            android:text="@string/add_post_detail" />
	        	
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/RelativeLayoutHelp2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
	        
	        <ImageView
	            android:id="@+id/sortIconImage"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:contentDescription="@string/sort_icon_detail"
	            android:src="@drawable/ic_action_sort_by_size" />
	
	        <TextView
	            android:id="@+id/sortIconText"
	            android:layout_toRightOf="@+id/sortIconImage"
	            android:layout_alignBottom="@+id/sortIconImage"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="20dp"
	            android:text="@string/sort_icon_detail" />
	        	
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/RelativeLayoutHelp3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
	        
	        <ImageView
	            android:id="@+id/bookmarkIconImage"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:contentDescription="@string/bookmark_icon_detail"
	            android:src="@drawable/ic_notification_bookmark" />
	
	        <TextView
	            android:id="@+id/bookmarkIconText"
	            android:layout_toRightOf="@+id/bookmarkIconImage"
	            android:layout_alignBottom="@+id/bookmarkIconImage"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="20dp"
	            android:text="@string/bookmark_icon_detail" />
	        	
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/RelativeLayoutHelp4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
	        
	        <ImageView
	            android:id="@+id/refreshIconImage"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:contentDescription="@string/refresh_icon_detail"
	            android:src="@drawable/ic_action_refresh" />
	
	        <TextView
	            android:id="@+id/refreshIconText"
	            android:layout_toRightOf="@+id/refreshIconImage"
	            android:layout_alignBottom="@+id/refreshIconImage"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="20dp"
	            android:text="@string/refresh_icon_detail" />
	        	
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/RelativeLayoutHelp5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
	        
	        <ImageView
	            android:id="@+id/favoriteIconImage"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:contentDescription="@string/favorite_icon_detail"
	            android:src="@drawable/ic_action_favorite" />
	
	        <TextView
	            android:id="@+id/favoriteIconText"
	            android:layout_toRightOf="@+id/favoriteIconImage"
	            android:layout_alignBottom="@+id/favoriteIconImage"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="20dp"
	            android:text="@string/favorite_icon_detail" />
	        	
        </RelativeLayout>
        
        <TextView
            android:id="@+id/BrowseTopLevelText"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_browse_top_level"
            android:textAppearance="?android:attr/textAppearanceMedium" />
      
        <TextView
            android:id="@+id/BrowseTopLevelDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/browse_top_level_detail"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        
        <TextView
            android:id="@+id/BrowseRepliesText"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_browse_replies"
            android:textAppearance="?android:attr/textAppearanceMedium" />
      
        <TextView
            android:id="@+id/BrowseRepliesDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/browse_replies_detail"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

</ScrollView>