<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:theme="@android:style/Theme.NoTitleBar"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="right"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.team5geotopics.ManualLocationActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/longTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/manualLocation"
        android:layout_marginBottom="80dp"
        android:text="@string/longitude_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/manualLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/longTextView"
        android:layout_toRightOf="@+id/longTextView"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/latTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/manualLocation"
        android:layout_alignLeft="@+id/longTextView"
        android:text="@string/latitude_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/manualLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="157dp"
        android:text="@string/submit_button" />

    <EditText
        android:id="@+id/manualLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/latTextView"
        android:layout_alignLeft="@+id/manualLongitude"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal" />

    <TextView
        android:id="@+id/manLocHeaderTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/manualLongitude"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:text="@string/man_location_header"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
