<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BrowseTopLevelView" >

    <LinearLayout
        android:id="@+id/reply_comment_wrapper"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="top"
        android:orientation="vertical" >

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/reply_comment_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/title_top_level_activity"
                    android:textSize="20sp" />

                <View
                    android:id="@+id/reply_divider1"
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:layout_below="@id/reply_comment_title"
                    android:background="@android:color/darker_gray"
                    android:paddingBottom="2dp"
                    android:paddingTop="1dp" />

                <TextView
                    android:id="@+id/reply_comment_body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/reply_divider1"
                    android:paddingBottom="5dp"
                    android:paddingTop="10dp"
                    android:text="@string/reply_level_activity"
                    android:textSize="15sp" />

                <View
                    android:id="@+id/reply_divider2"
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:layout_below="@id/reply_comment_body"
                    android:background="@android:color/darker_gray"
                    android:paddingBottom="2dp"
                    android:paddingTop="1dp" />

                <ImageView
                    android:id="@+id/reply_comment_image"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_below="@id/reply_divider2"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/comment_image"
                    android:src="@drawable/ic_action_uploadedphoto" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/reply_comment_wrapper"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/reply_browse_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/reply_level_activity"
            android:textSize="15sp" />

        <View
            android:id="@+id/reply_divider3"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_below="@id/reply_browse_title"
            android:background="@android:color/darker_gray"
            android:paddingBottom="2dp"
            android:paddingTop="1dp" />

        <ListView
            android:id="@+id/reply_level_listView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reply_divider3"
            android:minHeight="500dp"
            tools:listitem="@layout/comment_list_item" >
        </ListView>
    </LinearLayout>

</LinearLayout>